# Course_project_4_api_parsing

./: Python.json  README.md  main.py  pyproject.toml
src/: abstract_class.py  api_classes.py  json_class.py
