[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Aleksander Garmashov <alexandr.mybe@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
